--- a/assets/age-verify-style.css
+++ b/assets/age-verify-style.css
@@ -1,7 +1,17 @@
-html {
-    color: white;
-    background-color: #026D77;
+:root {
+    --primary-color: #026d77;
+    --secondary-color: #230212;
+    --teritary-color: #4b0728;
+    --color: white;
+    --yes-color: #15cc29;
+    --no-color: #cc1616;
 }
+html {
+    color: var(--color);
+    background-color: var(--primary-color);
+}
+
+/* Header Styling */
 header {
     display: flex;
     justify-content: center;
@@ -10,9 +20,19 @@ header h1 {
     color: white;
     text-align: center;
     font-size: 50px;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid var(--secondary-color);
     width: 50%;
+    text-shadow: 2px 2px 5px black;
 }
+.header-style {
+    color: var(--secondary-color);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 50px;
+    font-weight: 100;
+    text-shadow: none;
+}
+
+
 #age-verify-box {
     display: flex;
     height: 60vh;
@@ -23,45 +43,60 @@ header h1 {
 .verification-form {
     text-align: center;
     font-size: 30px;
-    height: 250px;
-    width: 500px;
+    height: 300px;
+    width: 750px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     border-radius: 25px;
+    text-shadow: 2px 2px 5px black;
+}
+
+/* Button Styling */
+button {
+    box-shadow: 2px 2px 5px black;
+    text-shadow: 2px 2px 5px black;
+}
+button:hover {
+    cursor: pointer;
+    text-shadow: none;
 }
 .submit-btn-yes {
-
-    font-size: 15px;
-    color: white;
+    font-size: 30px;
+    color: var(--color);
     border-radius: 15px;
-    background-color: #15cc29;
-    height: 50px;
-    width: 100px;
+    background-color: var(--yes-color);
+    height: 75px;
+    width: 150px;
     text-decoration: none;
     border: none;
+    margin-top: 15px;
+    margin-right: 10px;
 }
 .submit-btn-no {
-    font-size: 15px;
+    font-size: 30px;
     border: none;
-    color: white;
+    color: var(--color);
     border-radius: 15px;
-    background-color: #cc1616;
-    height: 50px;
-    width: 200px;
+    background-color: var(--no-color);
+    height: 75px;
+    width: 150px;
+    margin-top: 15px;
+    margin-left: 10px;
+
 }
 
 /* Adding hover colors to the Yes and No buttons*/
 .submit-btn-yes:hover {
-    background-color: White;
-    color: #15cc29;
+    background-color: var(--color);
+    color: var(--yes-color);
     font-weight: bolder;
-    border: 2px solid #15cc29;
+    border: 2px solid var(--yes-color);
     box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
 }
 
 .submit-btn-no:hover {
-    background-color: white;
-    color: #cc1616;
+    background-color: var(--color);
+    color: var(--no-color);
     font-weight: bolder;
-    border: 2px solid #cc1616;
+    border: 2px solid var(--no-color);
     box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
 }
