--- a/assets/style.css
+++ b/assets/style.css
@@ -88,7 +88,7 @@ section h2 {
 
 /* Question Section */
 .question-section {
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
