--- a/assets/style.css
+++ b/assets/style.css
@@ -58,10 +58,49 @@ section div {
 section h2 {
     font-size: 50px;
 }
+/* Not sure why this would default to not showing
 .generate-drink {
     display: none;
-}
+}   */
+
 /* Drink Info Section */
+.card-container {
+    display: flex;
+}
+
+.landing-card {
+    width: 45%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 25px;
+    margin: 2.5%;
+}
+
+.landing-card h2 {
+    margin: 5px;
+    border-bottom: 4px solid #230212;
+}
+
+.card-content {
+    display: inline-block;
+}
+
+.button {
+    background-color: #230212;
+    color: white;
+}
+
+.sum-text {
+    font-size: 25px;
+    max-width: 90%;
+    text-align: center;
+    line-height: 150%;
+}
+
+.cocktail-generate-btn {
+    margin-top: 70px;
+
+}
+
 .drink-info {
     display: none;
     flex-wrap: wrap;
