--- a/assets/style.css
+++ b/assets/style.css
@@ -43,14 +43,14 @@ button:hover {
     font-weight: bold;
 }
 /* Section Styling */
-section {
+.home-section {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     text-shadow: 2px 2px 5px black;
 }
-section div {
+.home-section div {
     justify-content: center;
     text-align: center;
     margin-top: 50px;
@@ -155,6 +155,27 @@ h2 {
 .new-cocktail-btn {
     margin-bottom: 20px;
 }
+
+/* section for trivia */
+
+.stats-bar {
+    display: flex;
+    justify-content: space-around;
+    background-color: #230212;
+    border-radius: 25px;
+}
+.stats-card {  
+    display: inline-block;
+}
+
+.questions {
+    visibility: hidden;
+}
+
+.category-btn {
+    margin: 5%;
+}
+
 /* Category Section */
 .category-section {
     display: inline;
