--- a/assets/style.css
+++ b/assets/style.css
@@ -235,3 +235,21 @@ h2 {
     color: #cc1616;
     border: 4px solid #cc1616;
 }
+
+.final-score-card {
+    display: inline-block;
+    text-align: center;
+    width: 95%;
+    margin: 2.5%;
+}
+
+.final-score {
+    width: 100%;
+}
+.final-score-card p {
+    font-size: xx-large;
+    margin: 50px 0;
+}
+.final-score-card button {
+    margin: auto;
+}
