--- a/assets/age-verify-style.css
+++ b/assets/age-verify-style.css
@@ -99,3 +99,11 @@ button:hover {
     border: 2px solid var(--no-color);
     box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
 }
+
+.button:focus, .button.is-focused {
+    color: white;
+}
+
+.button:hover, .button.is-hovered {
+    color: black;
+}
